# qa-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  db-key.yaml  deployment.yaml  schema.sql  service.yaml
db/: schema.sql
migrations/: 0001_questions.sql  0002_answers.sql  0003_answer_photos.sql
src/: handlers.rs  main.rs  models.rs  routes.rs  utils.rs
tests/: get.rs
