[package]
name = "qa-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["full"] }
routerify = "3.0.0"
diesel = { version = "2.0.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
tokio = { version = "1.28.0", features = ["full"] }
